--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@
 .tr-single-tab {
   color: rgba(0, 0, 0, 0.85);
   font-size: 16px;
+  font-weight: 500;
   line-height: 24px;
   opacity: 0.85;
 }
