--- a/src/card.css
+++ b/src/card.css
@@ -1,9 +1,13 @@
 .card-list {
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-between;
   width: 100%;
 }
-.card-render{
+.card-render {
   margin-bottom: 20px;
-  padding: 0 8px;
+  /* padding-right: 16px; */
+}
+.card-render:nth-child(4n){
+  /* padding-left: 0; */
 }
